--- a/beFitLara/public/css/estilo2.css
+++ b/beFitLara/public/css/estilo2.css
@@ -584,7 +584,9 @@ section .regis{
    margin: 25px 0px;
    font-weight: bold;
 }
-
+  .error{
+    color: red;
+  }
 hr {
    height: 3px;
    width: 100%;
